# calculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: error.h  evaluator.h
lib/calculator_lib/include/: calculator_lib.h  lexer.h  parser.h  tokens.h
lib/calculator_lib/src/: evaluator.cpp  lexer.cpp  parser.cpp
src/: evaluator.cpp  lexer.cpp  main.cpp  parser.cpp
test/: test.cpp
